# cs170_8puzzlesolver

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  mainTestFromDocs.cpp  solver  test  unittest.cpp
src/: compareNode.h  game.cpp  game.h  node.cpp  node.h  tree.h
